--- a/kenziehub/.vercel/project.json
+++ b/kenziehub/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"KI7qR8Z40CAk4MucECUJIAPk","projectId":"prj_0R5pp1CuNZkhGhFJKdm7X3iCMbYy"}
+{"projectId":"prj_Q42f8sAQu1Z9Lk1UrRqPrQkS1fTd","orgId":"KI7qR8Z40CAk4MucECUJIAPk"}
